# MeMoRe

./: .gitignore  CMakeLists.txt  README.md
include/memore/: logger.hpp  recorder.hpp  sink.hpp
src/: recorder.cpp  sink.cpp
test/: memore_recorder_test.cpp
